--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "@types/react": "^18.2.57",
     "@types/node": "^17.0.14",
     "typescript": "^5.3.3"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/kod3000"
   }
 }
